<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/font_toolbar"
                android:text="تنظیمات"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/ibtm_back3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_back" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_setting_user"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/font_vazir"
                android:text="@string/setting_user_f"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/backgrond1"

                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/setting_et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/font_vazir"
                android:hint="@string/email_user_f"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/setting_et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/font_vazir"
                android:hint="@string/nameAndFamily_f"
                android:inputType="textPersonName"
                android:textColorHint="@android:color/black" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_setting_download"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/font_vazir"
                android:text="@string/setting_download_f"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/backgrond1" />
        </RelativeLayout>

        <Switch
            android:id="@+id/setting_playNext"
            style="@style/style_swich_setting"
            android:text="@string/setting_playMusic_user_f" />

        <Switch
            android:id="@+id/setting_sw_downloadApp"
            style="@style/style_swich_setting"
            android:text="@string/setting_downlodapp_f" />

        <Switch
            android:id="@+id/setting_saken"
            style="@style/style_swich_setting"
            android:text="@string/setting_khare_f" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/font_vazir"
            android:text="@string/setting_rahnma_f" />

        <Switch
            android:id="@+id/activity_setting_halat_black"
            style="@style/style_swich_setting"
            android:text="@string/setting_halatBlack_f" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_setting_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/font_vazir"
        android:text="ذخیره"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</RelativeLayout>